--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.09</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.11</span>
     </div>
     <div class="flex gap-2">
       <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Beginner Times</button>
@@ -40,9 +40,7 @@
 </div>
 <!-- Home Button -->
 <div class="mb-4">
-<a class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow" href="leaderboard.html">
-        ← Home
-      </a>
+
 </div>
 <!-- Track and Driver Filters -->
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-6">
@@ -415,7 +413,7 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
   </div>
 
-  <!-- Single Unified Sponsor Block -->
+  <!-- Unified Sponsor Block -->
   <div class="max-w-7xl mx-auto mt-12 px-4">
     <div class="bg-white rounded-2xl shadow p-6 text-center">
       <h2 class="text-lg font-semibold mb-4">Proudly Sponsored By</h2>
