--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.11</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.12</span>
     </div>
     <div class="flex gap-2">
       <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Beginner Times</button>
@@ -71,7 +71,7 @@
 </div>
 <!-- Sponsor Logos -->
 <div class="mt-12 text-center">
-<h2 class="text-lg font-semibold mb-2">Proudly Sponsored By</h2>
+<h2 class="text-lg font-semibold mb-2 text-sm text-gray-600 mt-4">Note: Any entry marked 'CLASSIFIER TIME' was user-submitted and cannot be verified. Only entries with P, Q, or R (Practice, Qualifying, Race) are verified server times.</h2>
 <div class="flex justify-center flex-wrap gap-6">
 
 
