--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.12</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.13</span>
     </div>
     <div class="flex gap-2">
-      <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Beginner Times</button>
+      <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Driver Times</button>
       <button onclick="scrollToSection('classifier')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Classifier</button>
       <button onclick="scrollToSection('serverStatusPanel')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Server Status</button>
     </div>
@@ -26,7 +26,7 @@
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 max-w-7xl mx-auto mt-8 px-4">
     <!-- Left: Leaderboard -->
     <div id="leaderboard" class="bg-white rounded-2xl shadow p-6 w-full">
-      <h2 class="text-xl font-bold mb-4">Live Leaderboard (Beginner Times)</h2>
+      <h2 class="text-xl font-bold mb-4">Live Leaderboard (Driver Times)</h2>
       
 <!-- Version Badge -->
 <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
@@ -36,7 +36,7 @@
 <!-- IFWL Logo and Header -->
 <div class="flex items-center justify-between mb-6">
 
-<h1 class="text-3xl font-bold">IFWL.NET Console Beginner server live timings</h1>
+<h1 class="text-3xl font-bold">IFWL.NET All Driver Times (Server + Classifier)</h1>
 </div>
 <!-- Home Button -->
 <div class="mb-4">
