--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>IFWL ACC Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-100 text-gray-900" style="background: url('ifwl_bg.webp') no-repeat center center fixed; background-size: cover;">
 
   <!-- Sticky Nav -->
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
