--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
 <!-- 🔗 Sponsor & Affiliates Moved Up -->
 <div class="mb-6 text-center">
-<h2 class="text-lg font-semibold mb-4 text-gray-700">Proudly Sponsored &amp; Affiliated With</h2>
+<h2 class="text-lg font-semibold mb-4 text-gray-700">Get your times submitted here to see which series in IFWL best suits your pace</h2>
 <div class="flex justify-center gap-4 flex-wrap items-center">
 <a href="https://www.g-portal.com/en?ref=ifwl" target="_blank" title="G-Portal (Main Sponsor)">
 </a>
@@ -416,7 +416,26 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
   <!-- Unified Sponsor Block -->
   <div class="max-w-7xl mx-auto mt-12 px-4">
     <div class="bg-white rounded-2xl shadow p-6 text-center">
-      <h2 class="text-lg font-semibold mb-4">Proudly Sponsored By</h2>
+      
+<h2 class="text-lg font-semibold mb-4">Proudly Sponsored By</h2>
+<div class="flex justify-center flex-wrap gap-6">
+  <a href="https://www.g-portal.com/?ref=ifwl" target="_blank">
+    <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
+  </a>
+  <a href="https://www.fanatec.com?utm_medium=FAP+Banner&utm_source=IFWL&utm_campaign=General+Links&a_aid=IFWL" target="_blank">
+    <img src="fanatec.png" alt="Fanatec" class="h-10">
+  </a>
+  <a href="https://cdkeys.pxf.io/3eBZvy" target="_blank">
+    <img src="cdkeys.png" alt="CDKeys" class="h-10">
+  </a>
+  <a href="https://mozaracing.com/?ref=IFWL" target="_blank">
+    <img src="moza.png" alt="Moza Racing" class="h-10">
+  </a>
+  <a href="https://abruzzi-official.co.uk/?sld=ifwlnet" target="_blank">
+    <img src="abruzzi.png" alt="Abruzzi" class="h-10">
+  </a>
+</div>
+
       <div class="flex justify-center flex-wrap gap-6">
         <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
         <img src="fanatec.png" alt="Fanatec" class="h-10">
