--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.13</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.1.13</span>
     </div>
     <div class="flex gap-2">
       <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Driver Times</button>
@@ -417,8 +417,9 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
   <div class="max-w-7xl mx-auto mt-12 px-4">
     <div class="bg-white rounded-2xl shadow p-6 text-center">
       
+
 <h2 class="text-lg font-semibold mb-4">Proudly Sponsored By</h2>
-<div class="flex justify-center flex-wrap gap-6">
+<div class="flex justify-center flex-wrap gap-6 mt-4">
   <a href="https://www.g-portal.com/?ref=ifwl" target="_blank">
     <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
   </a>
@@ -431,18 +432,8 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
   <a href="https://mozaracing.com/?ref=IFWL" target="_blank">
     <img src="moza.png" alt="Moza Racing" class="h-10">
   </a>
-  <a href="https://abruzzi-official.co.uk/?sld=ifwlnet" target="_blank">
-    <img src="abruzzi.png" alt="Abruzzi" class="h-10">
-  </a>
 </div>
 
-      <div class="flex justify-center flex-wrap gap-6">
-        <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
-        <img src="fanatec.png" alt="Fanatec" class="h-10">
-        <img src="cdkeys.png" alt="CDKeys" class="h-10">
-        <img src="moza.png" alt="Moza Racing" class="h-10">
-      </div>
-    </div>
   </div>
 
   <!-- JavaScript Logic -->
