--- a/index.html
+++ b/index.html
@@ -413,6 +413,63 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
   </div>
 
+  
+<!-- Include Swiper.js CSS and JS -->
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<!-- IFWL SimGrid Event Carousel -->
+<div class="max-w-7xl mx-auto mt-12 px-4">
+  <h2 class="text-xl font-bold mb-4">Upcoming IFWL Events</h2>
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide bg-white rounded-lg shadow p-4">
+        <img src="https://www.thesimgrid.com/championships/14385/cover.jpg" alt="PC | SATURDAY SHOWDOWN! | GT3" class="w-full h-48 object-cover rounded">
+        <h3 class="text-lg font-semibold mt-2">PC | SATURDAY SHOWDOWN! | GT3</h3>
+        <p class="text-sm text-gray-600">Starts: May 10, 14:00</p>
+        <a href="https://www.thesimgrid.com/championships/14385" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+      </div>
+      <div class="swiper-slide bg-white rounded-lg shadow p-4">
+        <img src="https://www.thesimgrid.com/championships/14476/cover.jpg" alt="IFWL.NET | PC | ENDURO!" class="w-full h-48 object-cover rounded">
+        <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
+        <p class="text-sm text-gray-600">Starts: Apr 26, 17:00</p>
+        <a href="https://www.thesimgrid.com/championships/14476" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+      </div>
+      <div class="swiper-slide bg-white rounded-lg shadow p-4">
+        <img src="https://www.thesimgrid.com/championships/13129/cover.jpg" alt="S3 | BEGINNER SERIES | PC" class="w-full h-48 object-cover rounded">
+        <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | PC</h3>
+        <p class="text-sm text-gray-600">Starts: Mar 19, 19:00</p>
+        <a href="https://www.thesimgrid.com/championships/13129" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+      </div>
+      <!-- More events omitted for brevity... -->
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
+</div>
+
+<script>
+  var swiper = new Swiper('.swiper-container', {
+    slidesPerView: 1,
+    spaceBetween: 10,
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+    breakpoints: {
+      640: {
+        slidesPerView: 2,
+        spaceBetween: 20,
+      },
+      1024: {
+        slidesPerView: 3,
+        spaceBetween: 30,
+      },
+    },
+  });
+</script>
+
+
   <!-- Unified Sponsor Block -->
   <div class="max-w-7xl mx-auto mt-12 px-4">
     <div class="bg-white rounded-2xl shadow p-6 text-center">
