--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         opt.value = track;
         opt.textContent = track;
         trackSelect.appendChild(opt);
-      });
+        });
+});
 
       trackSelect.addEventListener("change", onTrackChange);
       document.getElementById("driverSelect").addEventListener("change", updateTable);
@@ -138,7 +139,8 @@
         opt.value = driver;
         opt.textContent = driver;
         driverSelect.appendChild(opt);
-      });
+        });
+});
 
       updateTable();
     }
@@ -160,9 +162,11 @@
             td.className = "px-4 py-2";
             tr.appendChild(td);
           }
-        });
+          });
+});
         tbody.appendChild(tr);
-      });
+        });
+});
     }
 
     loadData();
@@ -395,7 +399,9 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     "Content-Type": "application/x-www-form-urlencoded"
   },
   body: formData.toString()
+  });
 });
+  });
 });
 
 </script>
@@ -423,12 +429,55 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
   <h2 class="text-xl font-bold mb-4">Upcoming IFWL Events</h2>
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide bg-white rounded-lg shadow p-4">
-        <img src="https://www.thesimgrid.com/championships/14385/cover.jpg" alt="PC | SATURDAY SHOWDOWN! | GT3" class="w-full h-48 object-cover rounded">
-        <h3 class="text-lg font-semibold mt-2">PC | SATURDAY SHOWDOWN! | GT3</h3>
-        <p class="text-sm text-gray-600">Starts: May 10, 14:00</p>
-        <a href="https://www.thesimgrid.com/championships/14385" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
-      </div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/14385/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="PC | SATURDAY SHOWDOWN! | GT3" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">PC | SATURDAY SHOWDOWN! | GT3</h3>
+  <p class="text-sm text-gray-600">Starts: May 10, 14:00</p>
+  <a href="https://www.thesimgrid.com/championships/14385" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/14476/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="IFWL.NET | PC | ENDURO!" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
+  <p class="text-sm text-gray-600">Starts: Apr 26, 17:00</p>
+  <a href="https://www.thesimgrid.com/championships/14476" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/13129/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="S3 | BEGINNER SERIES | PC" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | PC</h3>
+  <p class="text-sm text-gray-600">Starts: Mar 19, 19:00</p>
+  <a href="https://www.thesimgrid.com/championships/13129" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/13128/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="S3 | BEGINNER SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | CONSOLE CROSSPLAY</h3>
+  <p class="text-sm text-gray-600">Starts: Mar 19, 20:30</p>
+  <a href="https://www.thesimgrid.com/championships/13128" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/14057/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="AC (CM) - SKODA OCTAVIA VRS" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">AC (CM) - SKODA OCTAVIA VRS</h3>
+  <p class="text-sm text-gray-600">Starts: Apr 18, 18:30</p>
+  <a href="https://www.thesimgrid.com/championships/14057" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/13702/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY</h3>
+  <p class="text-sm text-gray-600">Starts: May 18, 19:00</p>
+  <a href="https://www.thesimgrid.com/championships/13702" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/13701/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
+  <p class="text-sm text-gray-600">Starts: May 18, 18:00</p>
+  <a href="https://www.thesimgrid.com/championships/13701" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+<div class="swiper-slide bg-white rounded-lg shadow p-4">
+  <img src="https://www.thesimgrid.com/championships/13159/cover.jpg" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded">
+  <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
+  <p class="text-sm text-gray-600">Starts: Mar 26, 18:00</p>
+  <a href="https://www.thesimgrid.com/championships/13159" target="_blank" class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Sign Up</a>
+</div>
+</div>
       <div class="swiper-slide bg-white rounded-lg shadow p-4">
         <img src="https://www.thesimgrid.com/championships/14476/cover.jpg" alt="IFWL.NET | PC | ENDURO!" class="w-full h-48 object-cover rounded">
         <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
@@ -449,6 +498,7 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 </div>
 
 <script>
+  document.addEventListener('DOMContentLoaded', function () {
   var swiper = new Swiper('.swiper-container', {
     slidesPerView: 1,
     spaceBetween: 10,
@@ -466,7 +516,8 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
         spaceBetween: 30,
       },
     },
-  });
+    });
+});
 </script>
 
 
@@ -496,7 +547,8 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
   <!-- JavaScript Logic -->
   <script>
     function scrollToSection(id) {
-      document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
+      document.getElementById(id).scrollIntoView({ behavior: 'smooth'   });
+});
     }
 
     (function classifierModule() {
@@ -637,7 +689,9 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     "Content-Type": "application/x-www-form-urlencoded"
   },
   body: formData.toString()
+  });
 });
+  });
 });
     })();
     (function leaderboardModule() {
@@ -681,7 +735,8 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
         opt.value = track;
         opt.textContent = track;
         trackSelect.appendChild(opt);
-      });
+        });
+});
 
       trackSelect.addEventListener("change", onTrackChange);
       document.getElementById("driverSelect").addEventListener("change", updateTable);
@@ -700,7 +755,8 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
         opt.value = driver;
         opt.textContent = driver;
         driverSelect.appendChild(opt);
-      });
+        });
+});
 
       updateTable();
     }
@@ -722,9 +778,11 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
             td.className = "px-4 py-2";
             tr.appendChild(td);
           }
-        });
+          });
+});
         tbody.appendChild(tr);
-      });
+        });
+});
     }
 
     loadData();
