--- a/index.html
+++ b/index.html
@@ -402,57 +402,57 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 </div>
 </div>
 <!-- Include Swiper.js CSS and JS -->
-<link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet"/>
+
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- IFWL SimGrid Event Carousel -->
 <div class="max-w-7xl mx-auto mt-12 px-4">
 <h2 class="text-xl font-bold mb-4">Upcoming IFWL Events</h2>
 <div class="swiper-container">
-<div class="swiper-wrapper">
+<div class="flex space-x-4 overflow-x-auto scrollbar-hide pb-4 px-1">
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="PC | SATURDAY SHOWDOWN! | GT3" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/14385/cover.jpg"/>
+<img alt="PC | SATURDAY SHOWDOWN! | GT3" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/14385/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">PC | SATURDAY SHOWDOWN! | GT3</h3>
 <p class="text-sm text-gray-600">Starts: May 10, 14:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14385" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="IFWL.NET | PC | ENDURO!" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/14476/cover.jpg"/>
+<img alt="IFWL.NET | PC | ENDURO!" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/14476/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
 <p class="text-sm text-gray-600">Starts: Apr 26, 17:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14476" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="S3 | BEGINNER SERIES | PC" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/13129/cover.jpg"/>
+<img alt="S3 | BEGINNER SERIES | PC" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/13129/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: Mar 19, 19:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13129" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="S3 | BEGINNER SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/13128/cover.jpg"/>
+<img alt="S3 | BEGINNER SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/13128/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | CONSOLE CROSSPLAY</h3>
 <p class="text-sm text-gray-600">Starts: Mar 19, 20:30</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13128" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="AC (CM) - SKODA OCTAVIA VRS" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/14057/cover.jpg"/>
+<img alt="AC (CM) - SKODA OCTAVIA VRS" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/14057/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">AC (CM) - SKODA OCTAVIA VRS</h3>
 <p class="text-sm text-gray-600">Starts: Apr 18, 18:30</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14057" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/13702/cover.jpg"/>
+<img alt="S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/13702/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY</h3>
 <p class="text-sm text-gray-600">Starts: May 18, 19:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13702" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/13701/cover.jpg"/>
+<img alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/13701/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: May 18, 18:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13701" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-<img alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded" onerror="this.src='https://via.placeholder.com/400x200?text=IFWL+Event';" src="https://www.thesimgrid.com/championships/13159/cover.jpg"/>
+<img alt="S2 | GT3 PRO AM SERIES | PC" class="w-full h-48 object-cover rounded" src="https://www.thesimgrid.com/championships/13159/cover.jpg"/>
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: Mar 26, 18:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13159" target="_blank">Sign Up</a>
@@ -471,37 +471,11 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13129" target="_blank">Sign Up</a>
 </div>
 <!-- More events omitted for brevity... -->
-<div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>
-<div class="swiper-button-next"></div>
-<div class="swiper-button-prev"></div>
 </div>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  var swiper = new Swiper('.swiper-container', {
-    slidesPerView: 3,
-    spaceBetween: 30,
-    loop: false,
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-    breakpoints: {
-      640: {
-        slidesPerView: 1,
-        spaceBetween: 10,
-      },
-      768: {
-        slidesPerView: 2,
-        spaceBetween: 20,
-      },
-      1024: {
-        slidesPerView: 3,
-        spaceBetween: 30,
-      }
-    }
-  });
-});
-        </script>
+
+
+</div>
+
 <!-- Unified Sponsor Block -->
 <div class="max-w-7xl mx-auto mt-12 px-4">
 <div class="bg-white rounded-2xl shadow p-6 text-center">
